--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,7 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "学習アプリ",
+  "name": "文章刺激＆かんじチャレンジ",
+  "description": "文章を読む練習と漢字を楽しく学べる学習アプリ",
   "icons": [
     {
       "src": "favicon.ico",
@@ -10,16 +11,25 @@
     {
       "src": "logo192.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "purpose": "any maskable"
     },
     {
       "src": "logo512.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "purpose": "any maskable"
     }
   ],
-  "start_url": ".",
+  "start_url": "/TextStimulationApp/",
   "display": "standalone",
+  "orientation": "any",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "prefer_related_applications": false,
+  "categories": ["education", "kids"],
+  "lang": "ja-JP",
+  "dir": "ltr",
+  "scope": "/TextStimulationApp/",
+  "display_override": ["standalone", "fullscreen", "minimal-ui"]
 }
